<resources>
	<string name="app_name" translatable="false">SchulNetz</string>
	
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="signin">Sign in</string>
	<string name="signout">Sign out</string>
	<string name="signoutConfirmation">Are you sure?</string>
	<string name="invalidCreds">Invalid username/password (This can also be caused if your school is unsupported)</string>
	<string name="selectHost">Select host</string>
	<string name="host">Host</string>
	<string name="noConnection">No internet connection</string>
	<string name="noDesc">No description provided</string>
	
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="other">Other...</string>
	<string name="copied">Copied!</string>
	
	<string name="noMaps">No supported Maps app installed</string>
	<string name="noPhone">No supported phone app installed</string>
	<string name="noCalendar">No supported calendar app installed</string>
	<string name="noMail">No supported mail app installed</string>
	
	<string name="grades">Grades</string>
	<string name="absences">Absences</string>
	<string name="timetable">Timetable</string>
	<string name="people">People</string>
	<string name="settings">Settings</string>
	<string name="subjects">Subjects</string>
	<string name="transactions">Transactions</string>
	
	<string name="students">Students</string>
	<string name="teachers">Teachers</string>
	<string name="classs">Class</string>
	<string name="home">Home</string>
	<string name="phone">Phone</string>
	<string name="birthdate">Date of Birth</string>
	<string name="birthday">Birthday</string>
	<string name="mail" translatable="false">Mail</string>
	<string name="bilingual">Bilingual</string>
	<string name="age">Years old</string>
	<string name="noPhoneNumber">No phone number provided</string>
	
	<string name="noGrades">No Grades yet</string>
	<string name="showReports">Show reported lessons</string>
	<string name="hideReports">Hide reported lessons</string>
	<string name="lesson">Lesson</string>
	<string name="lessons">Lessons</string>
	<string name="noLessons">No Lessons</string>
	<string name="timetableUnavailable">Timetable Unavailable</string>
	<string name="noAbsences">No Absences</string>
	<string name="missedLessons">Lessons missed</string>
	
	<string name="accountBalance">Account Balance</string>
	<string name="balance">Balance</string>
	
	<string name="newGrade">New grade published</string>
	<string name="modifiedGrade">Grade modified</string>
	<string name="newAbsence">Absence added</string>
	<string name="newExcusedAbsence">Excused absence added</string>
	<string name="excusedAbsence">Absence excused</string>
	<string name="newTransaction">Account balance changed</string>
	
	<string name="rightArrowDesc" translatable="false"><![CDATA[>]]></string>
	<string name="leftArrowDesc" translatable="false"><![CDATA[<]]></string>
	<string name="avatarDesc" translatable="false"><![CDATA[]]></string>
	
	<string name="defaultPage">Start Page</string>
	<string name="notifications">Notifications</string>
	<string name="gradeSettings">Grade Settings</string>
	<string name="source" translatable="false">Source Code [Github]</string>
	<string name="credits" translatable="false">Created by\nRuntimeOverflow</string>
	
	<string name="doubleNegativePoints">Double Negative Points</string>
	<string name="unvaluedGrade">Not Counting Subject</string>
	<string name="unvaluedGrades">Not Counting Subjects</string>
	<string name="gradeGroup">Subject Group</string>
	<string name="gradeGroups">Subject Groups</string>
	
	<string name="unvaluedGradesExplanation">Selected subjects won\'t count as plus/minus points. (Only subjects not included in a group can be selected)</string>
	
	<string name="gradeGroupsExplanation">Created groups will combine grades of multiple subjects and count them as a single subject. (For example: If Music and Art together count as one grade together, even though they\'re 2 separate subjects)</string>
	<string name="createGradeGroup">Create Subject Group</string>
	<string name="editGradeGroup">Edit Subject Group</string>
	<string name="newGroup">New Group</string>
	
	<string name="subjectGroupName">Group Name</string>
	<string name="roundOption">Grade Calculation</string>
	<string name="roundOptionUnvalued">Don\'t Count</string>
	<string name="roundOptionAverage">Take Average</string>
	<string name="roundOptionRoundedAverage">Round Grades to 0.5 and Take Average</string>
	<string name="subjectGroupDelete">Delete Group</string>
	<string name="subjectGroupAdd">Add</string>
	<string name="subjectGroupRemove">Remove</string>
</resources>