<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/grades_navigation"
        android:icon="@drawable/ic_grades"
        android:title="@string/grades" />
    
    <item
        android:id="@+id/absences_navigation"
        android:icon="@drawable/ic_absences"
        android:title="@string/absences" />
    
    <item
        android:id="@+id/timetable_navigation"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable" />
    <item
        android:id="@+id/people_navigation"
        android:icon="@drawable/ic_people"
        android:title="@string/people" />
    <item
        android:id="@+id/settings_navigation"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>