<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".Activities.StudentActivity">
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/classs" />
	
	<Button
		android:id="@+id/classButton"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:enabled="true"
		android:textAlignment="textStart"
		android:textAllCaps="false"
		android:textColor="#000000" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/home" />
	
	<Button
		android:id="@+id/homeButton"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:textAlignment="textStart"
		android:textAllCaps="false"
		android:textColor="#2196F3" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/phone" />
	
	<Button
		android:id="@+id/phoneButton"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:textAlignment="textStart"
		android:textAllCaps="false"
		android:textColor="#2196F3" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/birthdate"
		android:visibility="gone" />
	
	<Button
		android:id="@+id/birthdayButton"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:textAlignment="textStart"
		android:textAllCaps="false"
		android:textColor="#2196F3"
		android:visibility="gone" />
</LinearLayout>