<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Activities.TimetableFragment">
	
	<TextView
		android:id="@+id/dateLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:textSize="32sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<com.runtimeoverflow.SchulNetzClient.TimetableView
		android:id="@+id/timeTableView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dateLabel" />
	
	<ImageView
		android:id="@+id/previousButton"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/leftArrowDesc"
		android:rotation="180"
		android:src="@drawable/ic_submenu"
		app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
		app:layout_constraintEnd_toStartOf="@+id/dateLabel"
		app:layout_constraintTop_toTopOf="@+id/dateLabel" />
	
	<ImageView
		android:id="@+id/nextButton"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/rightArrowDesc"
		android:src="@drawable/ic_submenu"
		app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
		app:layout_constraintStart_toEndOf="@+id/dateLabel"
		app:layout_constraintTop_toTopOf="@+id/dateLabel" />
	
	<TextView
		android:id="@+id/noLessonsLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:text="@string/noLessons"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dateLabel" />
	
	<ProgressBar
		android:id="@+id/loadingIcon"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dateLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>