<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activities.SettingsFragment">
        
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
    
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/avatarDesc"
                    android:src="@drawable/avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/avatar" />
    
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent">
        
                    <TextView
                        android:id="@+id/nameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="24sp" />
        
                    <TextView
                        android:id="@+id/classLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
    
            <Button
                android:id="@+id/signoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/signout"
                android:textColor="#FFFFFF" />
    
            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />
            
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        
                <Button
                    android:id="@+id/transactionsButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/accountBalance"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        
                <ImageView
					android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/rightArrowDesc"
                    android:src="@drawable/ic_submenu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
    
            </androidx.constraintlayout.widget.ConstraintLayout>
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <TextView
				android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/defaultPage"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
    
            <Spinner
                android:id="@+id/startPageSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        
                <TextView
					android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notifications"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/notificationsSwitch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notificationsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
	
			<Space
				android:layout_width="match_parent"
				android:layout_height="48dp" />
	
			<View
				android:id="@+id/divider"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="?android:attr/listDivider" />
	
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<Button
					android:id="@+id/gradesSettingsButton"
					style="@style/Widget.AppCompat.Button.Borderless"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/gradeSettings"
					android:textAlignment="textStart"
					android:textAllCaps="false"
					android:textSize="18sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
		
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:contentDescription="@string/rightArrowDesc"
					android:src="@drawable/ic_submenu"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
	
			</androidx.constraintlayout.widget.ConstraintLayout>
	
			<View
				android:id="@+id/divider2"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="?android:attr/listDivider" />

		</LinearLayout>
        
        <Space
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
        
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <Button
                android:id="@+id/sourceCodeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#2196F3"
                android:textSize="18sp" />
    
            <View
				android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
    
            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />
    
            <TextView
				android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/credits"
                android:textAlignment="center" />
        </LinearLayout>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>